src/scss/06_components/pages/_basic-page.scss
[data-unpublished]::before{
  @include font('small');
  --line-height: 1;
  background: $color-error;
  color: $color-white;
  content: attr(data-unpublished);
  display: block;
  padding-left: $spacing-half;
  padding-right: $spacing-half;
  position: fixed;
  transform: rotate(-90deg) translateX(calc(-50% - 50vh));
  transform-origin: top left;

  @include breakpoint($component-side-padding-breakpoint) {
    content: attr(data-unpublished-long);
    @include font('body');
    --line-height: 1.5;
  }
}

.preamble,
.lead-in {
  @include font('lead');
}

.preamble::after {
  background: black;
  content: '';
  display: block;
  height: 2px;
  margin-bottom: $spacing-double;
  margin-top: $spacing-double;
  width: $spacing-quadruple;
}

.no-sidebar .component--lead-in {
  @include component-side-padding();
}

.page-type--page.has-sidebar {
  .before-content--in-main {
    .page-title {
      margin-top: 0;
    }
    .node--type-page {
      margin-top: $spacing-and-half;
    }
  }
}

.content-date {
  @include font('small');
  color: $color-black-60;
  margin-bottom: $spacing-and-half;
}

.content-date__datetime--updated::before {
  background-color: currentColor;
  content: '';
  display: inline-block;
  height: 1em;
  margin-bottom: -1px; // finetune vertical position to visually match text
  margin-left: $spacing-half;
  margin-right: $spacing-half;
  width: 1px;
}

.content-links {
  @include component-margin-top();
}

.content-links__title {
  @include font('h3');
}

.content-links__links {
  margin-top: $spacing-and-half;
  padding: 0;
}

.content-links__links__link {
  @include font('special.large_link');
  list-style: none;
  padding: 0;

  & + & {
    margin-top: $spacing;
  }

  a::after {
    @include pseudo-icon('arrow-right', $spacing-and-half);
    margin-left: $spacing-quarter;
  }
}

.content-tags {
  border-bottom: 1px solid $color-black-10;
  border-top: 1px solid $color-black-10;
}

$tag-gap: $spacing-half;
.content-tags__tags {
  @include flex-gap($tag-gap);
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-bottom: 0;
  margin-top: 0;
  padding-bottom: ($spacing-and-half - $tag-gap);
  padding-left: 0;
  padding-top: $spacing-and-half;
}

.content-tags__tags__tag {
  list-style: none;
  margin-bottom: $tag-gap;
  a {
    background-color: $color-silver;
    border-radius: 500px;
    display: inline-block;
    padding: 12px 20px;
    text-decoration: none;
    &:hover {
      background-color: $color-silver-dark
    }
  }
}

.sidebar_block_heading {
  @include font('h3');
  border-bottom: 2px solid $color-black;
  margin-top: $spacing-sextuple;
  padding-bottom: $spacing-and-half;
  width: 100%;
}

